<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>quadhex_robot_board_interface</name>
    <version>1.0.0</version>
    <description>Message interface for communication with the STM32 main control board</description>
    <maintainer email="mdmbct@163.com">greenhand520</maintainer>
    <license>GPL3.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>

    <depend>builtin_interfaces</depend>
    <depend>rosidl_default_generators</depend>
    <buildtool_depend>std_msgs</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
